--- a/style.css
+++ b/style.css
@@ -124,10 +124,35 @@ img {
   #lezioni .left,
   #lezioni .right {
     font-size: 13px;
+    margin: 0 3px;
+    padding-bottom: 10px;
   }
 
+/* fine prima parte */
+  #steps .row {
+    display: inline-block;
+    width: 420px;
+    margin: 0;
+  }
 
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right {
+    float: none;
+    margin: 0 auto;
+    width: 100%;
+  }
 
+  #steps .left,
+  #steps .central,
+  #steps .right {
+    font-size: 13px;
+    margin: 0 3px;
+  }
+
+  #steps .container.grey {
+    background-color: white;
+  }
 }
 
 
