--- a/style.css
+++ b/style.css
@@ -89,35 +89,24 @@ img {
   #lezioni .left img {
     width: 100px;
     height: 100px;
-    padding-bottom: 28px;
   }
 
   #lezioni .right img {
     width: 150px;
     height: 100px;
     padding-top: 20px;
-    padding-bottom: 28px;
   }
 
   #lezioni .row>.left,
   #lezioni .row>.right {
-    position: relative;
     width: 100%;
     float: none;
     margin: 0 auto;
   }
 
-  #lezioni .right h3 {
-    position: absolute;
-    top: 108px;
-    left: 180px;
-    font-size: 16px;
-  }
-
+  #lezioni .right h3,
   #lezioni .left h3 {
-    position: absolute;
-    top: 85px;
-    left: 172px;
+    margin-bottom: 0;
     font-size: 16px;
   }
 
@@ -129,6 +118,10 @@ img {
   }
 
 /* fine prima parte */
+  #steps {
+    background-color: white;
+  }
+
   #steps .row {
     display: inline-block;
     width: 420px;
@@ -150,17 +143,39 @@ img {
     margin: 0 3px;
   }
 
-  #steps .container.grey {
-    background-color: white;
-  }
-
   #steps img {
     width: 100px;
     height: 100px;
   }
 
 /* fine seconda parte */
+  #why .row {
+    width: 420px;
+    margin: 0;
+    background-color: #F2F2CE;
+  }
+  
+  #why img {
+    width: 65px;
+    height: 65px;
+  }
 
+  #why .row>.first,
+  #why .row>.second,
+  #why .row>.third {
+  margin-top: 10px;
+  font-size: 13px;
 }
 
+  hr {
+    border: 0.5px solid black;
+  }
+
+  #why h3,
+  #steps h3 {
+    margin-bottom: 0;
+  }
+
+}
+/* fine terza parte */
 
